[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-mesh-evals"
version = "1.0.0"
description = "System prompt evaluation framework for Insight Mesh using Langfuse"
authors = [{name = "Insight Mesh Team"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langfuse>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.14.0",
]

[project.scripts]
setup-evals = "setup_langfuse_evals:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.black]
line-length = 88
target-version = ['py311']
