[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-drive-ingester"
version = "1.2.5"
description = "Google Drive document ingester for RAG systems"
authors = [
    {name = "Travis Frisinger", email = "travis@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Google Drive API
    "google-api-python-client==2.108.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.1.0",

    # Core dependencies
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "asyncpg==0.29.0",

    # Vector database compatibility
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "pinecone>=3.0.0",
    "elasticsearch>=8.0.0,<9.0.0",  # Compatible with ES 8.11.0 server
    "openai>=1.35.0",  # For embeddings
    "anthropic>=0.25.0",  # Alternative embedding provider
    "numpy>=1.24.0",

    # Document processing
    "pymupdf>=1.23.0",  # PDF text extraction
    "python-docx>=1.1.0",  # Word document (.docx) processing
    "openpyxl>=3.1.0",  # Excel spreadsheet (.xlsx) processing
    "python-pptx>=0.6.23",  # PowerPoint (.pptx) processing
]

[project.scripts]
google-drive-ingester = "main:main"

[project.optional-dependencies]
dev = [
    "ruff==0.14.0",
    "pyright==1.1.390",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

# Explicit package configuration to avoid setuptools auto-discovery issues
[tool.setuptools]
packages = ["auth", "services"]
py-modules = ["main", "ingester"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["."]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by ruff format
    "E402",   # module level import not at top of file (for sys.path modifications)
    "B904",   # within except clause, raise exceptions with raise ... from err
    "B007",   # loop control variable not used within loop body
]

[tool.ruff.lint.per-file-ignores]
"debug/*.py" = ["E402"]  # Allow imports after sys.path modifications in debug files
"../debug/*.py" = ["E402"]  # Allow imports after sys.path modifications in debug files (from root)

# Pyright configuration
[tool.pyright]
pythonVersion = "3.11"
include = ["."]
exclude = ["__pycache__"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
