[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-drive-ingester"
version = "1.2.6"
description = "Google Drive document ingester for RAG systems"
authors = [
    {name = "Travis Frisinger", email = "travis@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Google Drive API
    "google-api-python-client==2.108.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.1.0",

    # Core dependencies
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "httpx>=0.27.0",  # HTTP client for SEC API
    "asyncpg==0.29.0",

    # Vector database
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.7.0",  # Self-hosted vector database
    "openai>=1.35.0",  # For embeddings
    "anthropic>=0.25.0",  # Alternative embedding provider
    "numpy>=1.24.0",

    # Document processing
    "pymupdf>=1.23.0",  # PDF text extraction
    "python-docx>=1.1.0",  # Word document (.docx) processing
    "openpyxl>=3.1.0",  # Excel spreadsheet (.xlsx) processing
    "python-pptx>=0.6.23",  # PowerPoint (.pptx) processing
    "beautifulsoup4>=4.12.0",  # HTML parsing for SEC filings
    "feedparser>=6.0.0",  # RSS feed parsing for future use

    # Database (for document tracking via tasks module)
    "sqlalchemy[asyncio]>=2.0.0",  # ORM and database toolkit - must match tasks module
    "pymysql>=1.1.0",  # MySQL driver - must match tasks module
    "cryptography>=41.0.0",  # Required for MySQL auth methods - must match tasks module
    "alembic>=1.13.0",  # Database migrations - must match tasks module
]

[project.scripts]
google-drive-ingester = "main:main"

[project.optional-dependencies]
dev = [
    "ruff==0.14.0",
    "pyright==1.1.390",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

# Explicit package configuration to avoid setuptools auto-discovery issues
[tool.setuptools]
packages = ["auth", "services"]
py-modules = ["main", "ingester"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["."]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by ruff format
    "E402",   # module level import not at top of file (for sys.path modifications)
    "B904",   # within except clause, raise exceptions with raise ... from err
    "B007",   # loop control variable not used within loop body
]

[tool.ruff.lint.per-file-ignores]
"debug/*.py" = ["E402"]  # Allow imports after sys.path modifications in debug files
"../debug/*.py" = ["E402"]  # Allow imports after sys.path modifications in debug files (from root)

# Pyright configuration
[tool.pyright]
pythonVersion = "3.11"
include = ["."]
exclude = ["__pycache__"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
