[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-slack-bot-tasks"
version = "1.2.5"
description = "APScheduler WebUI for AI Slack Bot - Scheduled task management"
authors = [
    {name = "Travis Frisinger", email = "travis@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core scheduling
    "apscheduler>=3.10.4",

    # Web UI
    "flask>=3.0.0",
    "flask-cors>=4.0.0",

    # Time zones
    "tzlocal>=5.2",
    "pytz>=2023.3",

    # Configuration & environment
    "python-dotenv>=1.0.0",
    "pydantic>=1.9.0",
    "pydantic-settings>=2.0.0",

    # HTTP & requests for API calls
    "requests>=2.28.0",
    "aiohttp>=3.8.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",

    # Google Drive API (for scheduled ingestion)
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",

    # Slack SDK (for user import)
    "slack-sdk>=3.35.0",

    # Logging
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# Test dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

# Development tools
dev = [
    "ruff==0.8.4",
    "pyright==1.1.390",
    "pre-commit==4.0.1",
]

[project.scripts]
tasks-server = "app:main"

# Package discovery configuration
[tool.setuptools]
packages = ["config", "jobs", "services", "utils", "tests"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["."]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv", "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "PL",   # pylint
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long, handled by ruff format
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B011", "F811"]  # Allow tests to use asserts, etc.

[tool.ruff.lint.isort]
known-first-party = ["."]

# Ruff formatting configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pyright configuration
[tool.pyright]
pythonVersion = "3.11"
include = ["."]
exclude = ["tests", "**/__pycache__", "**/node_modules"]
typeCheckingMode = "standard"

# Coverage configuration (centralized)
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "setup.py",
    "app.py",  # Flask entry point - difficult to test without integration tests
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["."]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-fail-under=70",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
